Add grades > insert manually update

--- a/A-Z/Grades/Final-Grades-Tool-copy.html
+++ b/A-Z/Grades/Final-Grades-Tool-copy.html
@@ -2324,3 +2324,181 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
+
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4 style="text-align: center;"><strong>How to enter grades manually</strong></h4>
+</div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px;">
+    <table style="height: 2204px; width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
+        <tbody>
+            <tr style="height: auto;">
+                <td style="width: 7%; border-style: hidden; height: auto;"><strong>
+                        <span style="font-size: 14pt;">1.</span>
+                    </strong></td>
+                <td style="width: 90%; border-style: hidden; height: auto;"><strong>Open<span style="text-decoration: underline;">Final Grades</span> from the course menu</strong>
+                </td>
+            </tr>
+            <tr style="height: 201px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: autox;"><strong>
+                        <span style="font-size: 14pt;">&nbsp;</span>
+                    </strong></td>
+                <td style="width: 90%; border-style: hidden; height: auto;">
+                    <p>
+                        <span class="element_toggler" role="button" aria-controls="coursemenu1" aria-expanded="False">
+                            <span style="color: #6096e6;"><em>
+                                    <a class="icon-question"></a>Can't see this course menu?
+                                </em></span>
+                        </span>
+                    </p>
+                    <div id="coursemenu1" style="display: none; color: #6096e6;">
+                        <ol>
+                            <li>
+                                <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL">Go to <u>Settings</u> at the bottom of your course menu</p>
+                            </li>
+                            <li>
+                                <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL">Click on the tab <u>Navigation</u> at the top</p>
+                            </li>
+                            <li>
+                                <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL">Scroll down until you reach the <u>Final Grades</u> menu. Enable this menu by clicking on the icon with three dots or by dragging and drop this menu to the top.</p>
+                            </li>
+                            <li>
+                                <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL">Click on <u>Save</u> at the bottom of the page</p>
+                            </li>
+                        </ol>
+                    </div>
+                    <br />
+                    <img id="5080221" src="https://canvas.uva.nl/courses/8175/files/5080221/preview" alt="gotogradecalcsetup.png" />
+                    <br />
+                    <br />
+                </td>
+            </tr>
+            <tr style="height: 46px; padding-bottom: 8px;">
+                <td style="width: 7%; height: 38px; border-style: hidden;"><strong>
+                        <span style="font-size: 14pt;">2.</span>
+                    </strong></td>
+                <td style="width: 90%; height: 38px; border-style: hidden;"><strong>Press <span style="text-decoration: underline;">More options</span> at the bottom of the page</strong></td>
+            </tr>
+            <tr style="height: 515px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: autox;"><strong>
+                        <span style="font-size: 14pt;">&nbsp;</span>
+                    </strong></td>
+                <td style="width: 90%; border-style: hidden; height: autox;">
+                    <img src="https://canvas.uva.nl/courses/8175/files/4409078/preview" alt="calcset5.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4409078" data-api-returntype="File" />
+                    <br />
+                    <br />
+                </td>
+            </tr>
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; height: 40px; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>3.</strong></span>
+                </td>
+                <td style="width: 90%; height: 40px; border-style: hidden;"><strong>A number of settings will appear. Under <span style="text-decoration: underline;">Retake</span>: select the option <span style="text-decoration: underline;">Partial results can be retaken separately</span></strong>&nbsp;</td>
+            </tr>
+            <tr style="height: 505px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: autox;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden; height: autox;"><i>
+                        <span style="text-decoration: none;">If all assignments and/or grading elements can be retaken as a whole, then select </span>
+                    </i><i><u>This result can be retaken as a whole
+                            <br />
+                            <img id="5080479" src="https://canvas.uva.nl/courses/8175/files/5080479/preview" alt="calcsettingsretake.png" />
+                            <br />
+                        </u></i></td>
+            </tr>
+            <tr style="height: 32px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto;">
+                    <span style="font-size: 14pt;"><strong>4.</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden; height: auto;"><strong>A new <span style="text-decoration: underline;">Retake</span> column appears</strong></td>
+            </tr>
+            <tr style="height: 410px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: autox;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden; height: autox;">
+                    <br />
+                    <img src="https://canvas.uva.nl/courses/8175/files/4409106/preview" alt="calcset6.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4409106" data-api-returntype="File" />
+                    <br />
+                    <br />
+                </td>
+            </tr>
+            <tr style="height: 32px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto;">
+                    <span style="font-size: 14pt;"><strong>5.</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden; height: auto;"><strong>Go to the item for which you would like to add a retake</strong></td>
+            </tr>
+            <tr style="height: 32px;">
+                <td style="width: 7%; border-style: hidden; height: auto;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden; height: auto;"><strong> Click on the <span style="text-decoration: underline;">down arrow</span> icon next to <span style="text-decoration: underline;">None</span> and select <span style="text-decoration: underline;">Existing assignment</span></strong>
+                    <br />
+                    <br />
+                        <img id="5080485" src="https://canvas.uva.nl/courses/8175/files/5080485/preview" alt="calcsetretakeexi.png" />
+                    <br />
+                    <br />
+                </td>
+            </tr>
+            <tr style="height: 32px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto;">
+                    <span style="font-size: 14pt;"><strong>6.</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden; height: auto;"><strong>Select the item you wish to add as a retake</strong></td>
+            </tr>
+            <tr style="height: 293px;">
+                <td style="width: 7%; border-style: hidden; height: autox;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden; height: autox;">
+                    <img src="https://canvas.uva.nl/courses/8175/files/4409112/preview" alt="chooseanitem.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4409112" data-api-returntype="File" />
+                    <br />
+                    <br />
+                </td>
+            </tr>
+            <tr style="height: 32px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto;">
+                    <span style="font-size: 14pt;"><strong>7.</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden; height: auto;"><strong>When you click on the item, it will appear in the calculation setup</strong></td>
+            </tr>
+            <tr style="height: 32px;">
+                <td style="width: 7%; border-style: hidden; height: auto;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden; height: auto;">
+                    <img id="5080516" src="https://canvas.uva.nl/courses/8175/files/5080516/preview" alt="calcsettingsretakeappears.png" />
+                    <br />
+                    <br />
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <p>&nbsp;</p>
+</div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <a class="btn Button" style="margin: 3px;" href="#topmenu">
+        <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span>
+    </a>
+    <a class="btn Button" style="margin: 3px;" href="#from-canvas">
+        <i class="icon-arrow-up"></i> <span>&nbsp;Back to Add Grades</span>
+    </a>
+    <a class="btn Button--primary" style="margin: 3px;" href="#basic3">
+        <i class="icon-forward"></i> <span>&nbsp;Next: <em>Assign weight to grades</em></span>
+    </a>
+</div>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
