Heel veel nieuwe dingen

--- a/Homepage/21_22_sept.html
+++ b/Homepage/21_22_sept.html
@@ -164,7 +164,7 @@
         <div class="col-xs-20 col-md-6">
 
             <a title="Online and Hybrid teaching" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page">
-                <img style="margin-top: 20px;" src="https://canvas.uva.nl/courses/8175/files/5123509/preview" alt="Home-hybridbanner-2.jpg"/>
+                <img style="margin-top: 20px;" id="5123509" src="https://canvas.uva.nl/courses/8175/files/5123509/preview" alt="Home-hybridbanner-2.jpg" />
             </a>
 
             <a title="Final Grades tool" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-returntype="Page">
