--- a/A-Z/Exams/Exams_Canvas_EN.html
+++ b/A-Z/Exams/Exams_Canvas_EN.html
@@ -1,10 +1,3 @@
-<!-- EN -->
-
-<p> hallo Robyn </p>
-<p> hallo Lisanne </p>
-<p> En rik ook </p>
-<p> test </p>
-
 <p>
     <a id="topmenu"></a>
     <a id="top"></a>
@@ -38,10 +31,7 @@
                 <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 25px;">
                     <h4>
                         <span style="color: #000000;">
-                            <span style="font-size: 14pt;">Creating an online examination</span>
-                            <span style="font-size: 14pt;"> i</span>
-                            <span style="font-size: 14pt;">n</span>
-                            <span style="font-size: 14pt;"> Canvas</span>
+                            <span style="font-size: 14pt;">Creating an online exam in Canvas</span>
                         </span>
                     </h4>
                     <p>To make an exam in Canvas a number of steps have to be taken. For example, you have to consider what type of questions you are going to ask.&nbsp;</p>
@@ -51,39 +41,40 @@
         </div>
         <div class="col-xs-12 col-md-7">
             <div class="styleguide-section__grid-demo-element">
-                <div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
-                    <a style="display: block; height: 100%; text-decoration: none; color: inherit;" href="#deel1"><i class="icon-question" style="width: 30px;"></i>
-                        <span style="color: #000000;">How do I prepare <em>close-ended</em> <em>questions</em> in Canvas?</span>
+                <div class="content-box" style="background-color: #ffffff; padding: 10px;">
+                    <i class="icon-question" style="width: 30px;"></i>
+                    <a style="display: block; height: 100%;" href="#deel1">
+                        How do I prepare <em>close-ended</em> <em>questions</em> in Canvas?
                     </a>
                 </div>
-                <div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
-                    <a style="display: block; height: 100%; text-decoration: none; color: inherit;" href="#deel2"><i class="icon-assignment" style="width: 30px;"></i>
-                        <span style="color: #000000;">How do I prepare <em>open-ended questions</em> or a <em>take home exam</em> in Canvas?</span>
+                <div class="content-box" style="background-color: #ffffff; padding: 10px;">
+                    <a style="display: block; height: 100%;" href="#deel2">
+                        How do I prepare <em>open-ended questions</em> or a <em>take home exam</em> in Canvas?
                     </a>
                 </div>
-                <div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
-                    <a style="display: block; height: 100%; text-decoration: none; color: inherit;" href="#deel4"><i class="icon-peer-review" style="width: 30px;"></i>
-                        <span style="color: #000000;">How do I instruct my students? </span>
+                <div class="content-box" style="background-color: #ffffff; padding: 10px;">
+                    <a style="display: block; height: 100%;" href="#deel4"><i class="icon-peer-review" style="width: 30px;"></i>
+                     How do I instruct students?
                     </a>
                 </div>
-                <div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
-                    <a style="display: block; height: 100%; text-decoration: none; color: inherit;" href="#deel3"><i class="icon-student-view" style="width: 30px;"></i>
-                        <span style="color: #000000;">What kind of support should I provide during a test?</span>
+                <div class="content-box" style="background-color: #ffffff; padding: 10px;">
+                    <a style="display: block; height: 100%;" href="#deel3"><i class="icon-student-view" style="width: 30px;"></i>
+                        What kind of support should I provide during a test?
                     </a>
                 </div>
-                <div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
-                    <a style="display: block; height: 100%; text-decoration: none; color: inherit;" href="#deel5"><i class="icon-rubric" style="width: 30px;"></i>
-                        <span style="color: #000000;">How do I view and grade the results?</span>
+                <div class="content-box" style="background-color: #ffffff; padding: 10px;">
+                    <a style="display: block; height: 100%;" href="#deel5"><i class="icon-rubric" style="width: 30px;"></i>
+                        How do I view and grade the results?
                     </a>
                 </div>
-                <div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
-                    <a style="display: block; height: 100%; text-decoration: none; color: inherit;" href="#deel6"><i class="icon-stats" style="width: 30px;"></i>
-                        <span style="color: #000000;">How do I calculate the final grade?</span>
+                <div class="content-box" style="background-color: #ffffff; padding: 10px;">
+                    <a style="display: block; height: 100%;" href="#deel6"><i class="icon-stats" style="width: 30px;"></i>
+                        How do I calculate the final grade?
                     </a>
                 </div>
-                <div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
-                    <a style="display: block; height: 100%; text-decoration: none; color: inherit;" href="#inspection"><i class="icon-search" style="width: 30px;"></i>
-                        <span style="color: #000000;">Inspection session</span>
+                <div class="content-box" style="background-color: #ffffff; padding: 10px;">
+                    <a style="display: block; height: 100%;" href="#inspection"><i class="icon-search" style="width: 30px;"></i>
+                        Inspection session
                     </a>
                 </div>
             </div>
@@ -309,7 +300,7 @@
         <a href="#top">Back to the top <i class="icon-arrow-up"></i></a>
     </p>
     <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-    <div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
+    <div class="content-box" style="background-color: #ffffff; padding: 15px;">
         <a style="display: block; height: 100%; text-decoration: none; color: inherit;">
             <span style="font-size: 16pt;">How do I prepare close-ended questions in Canvas?</span>
         </a>
@@ -1079,7 +1070,7 @@
         <a href="#top">Back to the top <i class="icon-arrow-up"></i></a>
     </p>
     <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-    <div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
+    <div class="content-box" style="background-color: #ffffff; padding: 15px;">
         <a style="display: block; height: 100%; text-decoration: none; color: inherit;">
             <span style="font-size: 16pt;">How do I prepare open-ended questions or a take home exam in Canvas?</span>
         </a>
@@ -1813,7 +1804,7 @@
     <a href="#top">Back to the top <i class="icon-arrow-up"></i></a>
 </p>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-<div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
+<div class="content-box" style="background-color: #ffffff; padding: 15px;">
     <a style="display: block; height: 100%; text-decoration: none; color: inherit;">
         <span style="font-size: 16pt;">How I instruct my students?</span>
     </a>
@@ -2451,7 +2442,7 @@
     <a href="#top">Back to the top <i class="icon-arrow-up"></i></a>
 </p>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-<div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
+<div class="content-box" style="background-color: #ffffff; padding: 15px;">
     <a style="display: block; height: 100%; text-decoration: none; color: inherit;">
         <span style="font-size: 16pt;">What kind of support should I provide during a test?</span>
     </a>
@@ -2618,7 +2609,7 @@
     <a href="#top">Back to the top <i class="icon-arrow-up"></i></a>
 </p>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-<div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
+<div class="content-box" style="background-color: #ffffff; padding: 15px;">
     <a style="display: block; height: 100%; text-decoration: none; color: inherit;">
         <span style="font-size: 16pt;">How do I view and grade the results?</span>
     </a>
@@ -2777,7 +2768,7 @@
     <a href="#top">Back to the top <i class="icon-arrow-up"></i></a>
 </p>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-<div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
+<div class="content-box" style="background-color: #ffffff; padding: 15px;">
     <a style="display: block; height: 100%; text-decoration: none; color: inherit;">
         <span style="font-size: 16pt;">How do I calculate the final grade?</span>
     </a>
@@ -2823,7 +2814,7 @@
     <a href="#top">Back to the top <i class="icon-arrow-up"></i></a>
 </p>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-<div class="content-box" style="background-color: #e1e9f4; padding: 15px;">
+<div class="content-box" style="background-color: #ffffff; padding: 15px;">
     <a style="display: block; height: 100%; text-decoration: none; color: inherit;">
         <span style="font-size: 16pt;">Inspection session</span>
     </a>
