--- a/A-Z/Wiki_videos_lectures.html
+++ b/A-Z/Wiki_videos_lectures.html
@@ -86,7 +86,7 @@
             <li style="list-style-type: none;">
                 <ul>
                     <li>Teachers can request one or several recordings with <a title="By clicking on this link you can view the locations (lecture halls) that are equipped for recordings. After completing the request you will receive a URL-link from the web lecture services (Dienst Webcollege) that contains all past and futures recordings." href="http://webcollegeplanner.uva.nl/" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">http://webcollegeplanner.uva.nl/.</a> For more questions about weblectures, please contact <a title="mailto:webcolleges@uva.nl" href="mailto:webcolleges@uva.nl">webcolleges@uva.nl</a> (T: 020 525 2800).</li>
-                    <li><span class="element_toggler" role="button" aria-controls="webcollege_table" aria-expanded="False"> <a title="Click to expand more information" href="" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">What functionalities can I request with the webcollegeplanner?</a> <i class="icon-question"></i></span>
+                    <li><span class="element_toggler" role="button" aria-controls="webcollege_table" aria-expanded="False"> <a title="Click to expand more information" href="" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">What functionalities can I request with the webcollegeplanner?</a></span>
                         <div id="webcollege_table" style="display: none;">
                             <table style="width: auto; height: auto; color: #000000;">
                                 <tbody>
@@ -135,7 +135,7 @@
                         </div>
                     </li>
                     <li>It is possible to request a <strong>livestream</strong> with the webcollegeplanner. <strong>However</strong>, the livestream function has a delay of about 30 seconds which makes it not ideal for communicating with students at home. Starting this academic year, there will be a BRIO attached in every lecture hall by default and this will allow you to achieve the same goal, only without delay. Go to the 'Livestream' section at the top of this page to read more about it.</li>
-                    <li>Given the circumstances, we've provided a database for teachers containing all weblectures that were recorded between 2018 and 2020. You can <a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/weblectures-social-sciences" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/weblectures-social-sciences" data-api-returntype="Page">view the lectures here</a>.</li>
+                    <!--<li>Given the circumstances, we've provided a database for teachers containing all weblectures that were recorded between 2018 and 2020. You can <a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/weblectures-social-sciences" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/weblectures-social-sciences" data-api-returntype="Page">view the lectures here</a>.</li>-->
                 </ul>
             </li>
         </ul>
@@ -160,7 +160,7 @@
             <li style="list-style-type: none;">
                 <ul>
                     <li>How do you ensure that students can ask questions from home during a lecture? The following option is identified by teachers as most helpful and (above else) the easiest: ask a student or student-assistant onsite to keep track of questions in the Zoom chat. Teaching is hard enough these days, luckily we notice students are very willing to help.</li>
-                    <li>Use our new licensed tool <a href="https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/wooclap-interaction-with-your-audience/wooclap-interaction-with-your-audience.html" target="_blank" rel="noopener">WooClap</a> to interact with students.</li>
+                    <li>Use our new licensed tool <a href="https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/wooclap-interaction-with-your-audience/wooclap-interaction-with-your-audience.html" target="_blank" rel="noopener">WooClap</a> to interact with students online.</li>
                     <li>Really looking for something other than the Zoom chat or WooClap? Although we do not recommend using unlicensed tools, well.. head over to 'Interactive tools' at the top of this page and look for 'Padlet', you might like it!</li>
                     <li>Due to the limitations of classroom sound (no microphone to pick up students' voices), it is important for the instructor to repeat students' questions and comments so that online students are aware of the conversation on campus.</li>
                 </ul>
@@ -179,47 +179,55 @@
 
     </div>
     <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
-        <p><strong>Finding the right format for your classes</strong></p>
+        <p><strong>Finding the right format for your hybrid classes</strong></p>
         <ul>
             <li style="list-style-type: none;">
                 <ul>
-                    <li>While we are most certainly excited for our on-campus days to return, realistically, we also know that there are likely to be some &ldquo;post-pandemic&rdquo; situations that necessitate some flexibility in teaching. The FMG-Hybrid Committee has worked with the TLC, ICTO, and FS-BOL to ensure that you have the information and technology you need to make flexible teaching accessible to you. Since we know that classes, content, and teachers are different, the options are also quite varied. With that in mind, <a class="inline_disabled" href="https://canvas.uva.nl/courses/23796" target="_blank" rel="noopener">on this website</a>, you can find flexible teaching options grouped into three general formats.</li>
-                </ul>
-                <ul>
-                    <li>For more information on the issues below you can also read more <a href="https://medewerker.uva.nl/fmg/content-secured/az/hybride-onderwijs/hybride-onderwijs.html?origin=NAXWwVNGRUuIG%2BlVkzpO0Q#Samenvatting-beschikbare-tools-voor-Hybride-Onderwijs" target="_blank" rel="noopener">tips and information here.</a></li>
+                    <li>While we are most certainly excited for our on-campus days to return, realistically, we also know that there are likely to be some &ldquo;post-pandemic&rdquo; situations that necessitate some flexibility in teaching. The FMG-Hybrid Committee has worked with the TLC, ICTO, and FS-BOL to ensure that you have the information and technology you need to make flexible teaching accessible to you. Since we know that classes, content, and teachers are different, the options are also quite varied. With that in mind, <a href="https://medewerker.uva.nl/fmg/content-secured/az/hybride-onderwijs/hybride-onderwijs.html?origin=NAXWwVNGRUuIG%2BlVkzpO0Q#Samenvatting-beschikbare-tools-voor-Hybride-Onderwijs" target="_blank" rel="noopener">on this website</a>, you can find flexible teaching options grouped into three general formats.</li>
                 </ul>
             </li>
         </ul>
-        <p><strong>BRIO</strong></p>
+        <p><strong>BRIO <span style="color: #EF5625; margin-left: 5px;"><em>livestreaming device</em><span></strong></p> <img src="https://canvas.uva.nl/courses/8175/files/5136864/preview" alt="briokopie.png" width="122" style="float: right; margin-right: 10px;"/>
         <ul>
             <li style="list-style-type: none;">
                 <ul>
-                    <li><em>The Brio is a webcam with an exceptionally good microphone, which has been installed in the lecture halls and which can be reserved for use in a seminar room from the REC Facility Services (BRIOs will soon be installed in seminar rooms as well). <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-lecture-halls" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></li>
-                    <li><strong>You do not need to reserve the BRIO for lecture halls, you just need to know how to start/connect the device to your computer.</strong></li>
-                        <li style="list-style-type: none;">
-                            <ul>
-                                <li>Use the <a href="https://canvas.uva.nl/courses/8175/pages/brio-instructions" target="_blank" rel="noopener">instruction sheet</a> present in lecture halls</li>
-                                <li>Ask a student assistant for help</li>
-                                <li>Start-up support is available on request or ad-hoc in case of AV issues via the Facility Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a></li>
-                            </ul>
-                        </li>
-                    <li><strong>The BRIO will be used in combination with Zoom.</strong></li>
-                        <li style="list-style-type: none;">
-                            <ol>
-                                <li><a href="https://canvas.uva.nl/courses/8175/pages/using-zoom-in-canvas-for-teaching" target="_blank" rel="noopener">Create a Zoom meeting in your Canvas course.</a> This can be <em>one</em> recurring Zoom meeting for all lectures or <em>separate</em> meetings.</li>
-                                <li>Tell students to head over to the Zoom menu in Canvas to access the live lecture.</li>
-                                <li>The livestream will happen over Zoom. By using a BRIO, the lecture/seminar hall is now better captured in terms of audio and video quality.</li>
-                            </ol>
-                        </li>
+                    <li><em>The Brio is a webcam with an exceptionally good microphone, which has been installed in the lecture halls and which can be reserved for use in a seminar room from the REC Facility Services (soon, the BRIO will be installed in seminar rooms too). The BRIO functions well together with Zoom, serving as a livestream for your classes and lectures. <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-lecture-halls" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></li>
+                    <li><p><strong>You do not need to reserve the BRIO for lecture halls</strong></p></li>
+                    <li style="list-style-type: none;">
+                        You just need to know how to start/connect the device to your computer:
+                        <ul>
+                            <li>Use the <a href="https://canvas.uva.nl/courses/8175/pages/brio-instructions" target="_blank" rel="noopener">instruction sheet</a> present in lecture halls</li>
+                            <li>Ask a student assistant for help</li>
+                            <li>Start-up support is available on request or ad-hoc in case of AV issues via the Facility Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a></li>
+                        </ul>
+                    </li>
+                    <li><p><strong>The BRIO will be used in combination with Zoom</strong></p></li>
+                    <li style="list-style-type: none;">
+                        <ol>
+                            <li><a href="https://canvas.uva.nl/courses/8175/pages/using-zoom-in-canvas-for-teaching" target="_blank" rel="noopener">Create a Zoom meeting in your Canvas course.</a> This can be <em>one</em> recurring Zoom meeting for all lectures or <em>separate</em> meetings.</li>
+                            <li>Tell students to head over to the Zoom menu in Canvas to access the live lecture.</li>
+                            <li>The livestream will happen over Zoom. By using a BRIO, the lecture/seminar hall is now better captured in terms of audio and video quality.</li>
+                        </ol>
+                    </li>
+                    <li><p>This equipment can be booked (for seminar rooms) via the Facility Services Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a>.</p></li>
                 </ul>
             </li>
         </ul>
-        <p><strong>OWL</strong></p>
+        <p><strong>OWL <span style="color: #EF5625; margin-left: 5px;"><em>livestreaming device</em><span></strong></p> <img src="https://canvas.uva.nl/courses/8175/files/5136865/preview" alt="owlslabs.png" width="100"style="float: right; margin-right: 10px;"/>
         <ul>
             <li style="list-style-type: none;">
                 <ul>
-                    <li><em>The OWL is a device that provides online students a 360-degree viewing experience of the classroom (via a 360-degree camera) and allows students to hear the lecturer as it also functions as in-classroom microphone. The OWL will be used in combination with Zoom. <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-workgroup-rooms" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></li>
-                    <li>Prior to the class, teachers can request to use the OWLS by emailing <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a> (020 525) 1403 and/or working with their teaching planner. The device will be brought to the classroom at the scheduled time.</li>
+                    <li><p><em>The OWL is a device that provides online students a 360-degree viewing experience of the classroom (via a 360-degree camera) and allows students to hear the lecturer as it also functions as in-classroom microphone. This device is particularly suitable for group discussions, more speakers are automatically visible at the same time (Split screen). <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-workgroup-rooms" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></p></li>
+                    <li><p><strong>At least one week in advance</strong>, teachers can request to use the OWLS by emailing <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a> (020 525) 1403 and/or working with their teaching planner. The device will be brought to the classroom at the scheduled time.</p></li>
+                    <li><p>Start-up support is available on request or ad-hoc in case of AV issues via the Facility Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a>.</p></li>
+                    <li><p><strong>The OWL will be used in combination with Zoom</strong></p></li>
+                    <li style="list-style-type: none;">
+                        <ol>
+                            <li><a href="https://canvas.uva.nl/courses/8175/pages/using-zoom-in-canvas-for-teaching" target="_blank" rel="noopener">Create a Zoom meeting in your Canvas course.</a> This can be <em>one</em> recurring Zoom meeting for all lectures or <em>separate</em> meetings.</li>
+                            <li>Tell students to head over to the Zoom menu in Canvas to access the live lecture.</li>
+                            <li>The livestream will happen over Zoom. By using the OWL, the lecture/seminar hall is now better captured in terms of audio and video quality.</li>
+                        </ol>
+                    </li>
                 </ul>
             </li>
         </ul>
